--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.28.0",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.14.5"
+    "sweetalert2": "^11.14.5",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
