--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
+    "react-snowfall": "^2.1.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.14.5",
     "swiper": "^11.1.14"
